Bug 348478 - Missing menu entries after closing a detached tab
Summary: Missing menu entries after closing a detached tab
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 15.04.1
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-31 02:13 UTC by André Marcelo Alvarenga
Modified: 2018-05-12 13:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2015-05-31 02:13:31 UTC
I've recorded a screencast with the problem: http://youtu.be/K3xQR2fiUT4

Reproducible: Always

Steps to Reproduce:
2) Detach the new tab using right-click (Detach Tab)
3) Close the detached tab
3) See menu entries

This affects File, Edit, View and Settings menus.
Comment 1 Kurt Hindenburg 2017-12-23 17:06:46 UTC
Git commit 52185790cb4b18b42a9f95dd1b7335e00202e1ba by Kurt Hindenburg.
Committed on 23/12/2017 at 17:05.
Pushed by hindenburg into branch 'master'.

Fix menus after closing a detaching tab

Patch by ahmadsamir
Differential Revision: https://phabricator.kde.org/D9448

M  +6    -3    src/ViewManager.cpp

https://commits.kde.org/konsole/52185790cb4b18b42a9f95dd1b7335e00202e1ba